# bunking_game_rust_phycological_horror

./: .gitignore  3D viewer.py  Cargo.toml  Readme.md  command.txt  normalize_map_colors.py
assets/: tree.py
assets/map/: color_config.ron
assets/narrative/: path1_true_wake.yaml  path2_sunk_legend.yaml  path3_cycle_breaker.yaml  path4_fragmented_mind.yaml  path5_puppetmaster.yaml  path6_legend.yaml  path6_sunk_legend.yaml
scripts/: validate_timeline.py
src/: config.rs  endings.rs  escape_routes.rs  main.rs  narrative.rs  progression.rs  route_events.rs  route_mapping.rs  utils.rs
src/core/: mod.rs  npc_ai.rs  player.rs  warden.rs  world.rs
src/data/: assets_loader.rs  items.rs  mod.rs
src/states/: game_state.rs  mod.rs
src/systems/: cars.rs  controls.rs  inventory.rs  mod.rs  performance.rs  savegame.rs  settings.rs  ui.rs
