[package]
name = "Bunk_Again_Lakshmi_Narayan"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
bevy = { version = "0.14.2", default-features = true }
bevy_rapier3d = { version = "0.24.0", features = ["debug-render-3d"] }
rand = "0.8"
ron = "0.8"
bevy_asset_loader = "0.20"
bevy-inspector-egui = "0.22"
bevy_ecs_tilemap = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
